grafana/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
  labels:
    app: grafana
  name: grafanaservice
  namespace: devops-tools
spec:
  selector:
    name: grafana
  ports:
  - port: 3000
    targetPort: 3000
